Version: Beta 1
Add:
* 初步完成ffmpeg部分第一版

Version: Alpha 4(仮)
Fix:
* 美化按钮样式
* 现在窗口默认位置居中
* 清除垃圾文件

Version: Alpha 3
Add:
* 增加配置文件功能，几乎所有操作都能自动保存
* 现在单击地址框可以自动全选，便于替换
* Youtube-DL视频抓取后自动打开文件夹
* 新增程序图标

Fix:
* 代码美化整理

Version: Alpha 2
Add
* 异常处理和差错机制
* 命令运行完后自动退出
* 整合Youtube-DL
Fix
* 锁定窗体大小
* 解决各种报错