@@ -8,8 +8,8 @@
         WindowStartupLocation="CenterScreen"
         Title="Mizore工具箱" Height="290" Width="560" Loaded="Window_Loaded" Icon="Properties/bitbug_favicon.ico" ResizeMode="CanMinimize">
     <Grid>
-        <TabControl Name="TabControl">
-            <TabItem Header="Youtube-DL" Name="TabYoutubeDL" IsSelected="True" >
+        <TabControl Name="TabControl" SelectionChanged="TabControl_SelectionChanged">
+            <TabItem Header="Youtube-DL" Name="TabYoutubeDL" IsSelected="True">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
@@ -35,7 +35,7 @@
                         <Label Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10,10,0,0" FontSize="16">视频地址</Label>
                         <TextBox Grid.Column="1" Name="TxtInAddr" Width="420" Margin="10,10,0,0" FontSize="16"
                                  HorizontalAlignment="Center" VerticalContentAlignment="Center" TabIndex="0" AllowDrop="False" 
-                                 TextChanged="SaveConfig"/>
+                                 TextChanged="SaveConfig" GotFocus="TxtInAddr_GotFocus"/>
 
 
                     </Grid>
@@ -187,7 +187,8 @@
                         </Grid.RowDefinitions>
                         <Label Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10,10,0,0" FontSize="16">选择文件</Label>
                         <TextBox Grid.Column="1" Name="TxtFFMpegIn" Width="310" Margin="10,10,0,0" FontSize="16" IsReadOnly="True"
-                                 HorizontalAlignment="Center" VerticalContentAlignment="Center"/>
+                                 HorizontalAlignment="Center" VerticalContentAlignment="Center" 
+                                 AllowDrop="True" PreviewDragOver="TxtFFMpegIn_PreviewDragOver" PreviewDrop="TxtFFMpegIn_PreviewDrop"/>
                         <Button Grid.Column="2" Content="浏览..."  Height="28" Width="100" Margin="10,10,10,0" 
                                  Name="BtnFFMpegBrowseIn" Click="BtnFFMpegBrowseIn_Click"/>
 
@@ -338,7 +339,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Label x:Name="label" Grid.Row="0" Content="Mizore工具箱 Beta 1" Height="100" HorizontalAlignment="Center"
+                    <Label x:Name="label" Grid.Row="0" Content="Mizore工具箱 Beta 2" Height="100" HorizontalAlignment="Center"
                            VerticalContentAlignment="Center" FontSize="22" Grid.Column="1" Margin="63.538,0,156,1"/>
                     <Label x:Name="LblAbout" Grid.Row="1" Height="100"  HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="176.538,1,269,0" Grid.Column="1"/>
                 </Grid>
